--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,6 +36,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        
+      - name: Yarn Bundle/Type Definitions
+        run: 
+          yarn install --frozen-lockfile
+
+          yarn tsc
+
+          yarn build
 
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
