--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
   - ./deployment.yaml
   - ./service.yaml
+  - ./postgres-secrets.yaml
+  - ./backstage-secrets.yaml
+  - ./postgres-settings.yaml
