--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -2,6 +2,16 @@ app:
   # Should be the same as backend.baseUrl when using the `app-backend` plugin.
   baseUrl: ${BACKSTAGE_BASE_URL}
 
+auth:
+  environment: production
+  providers:
+    github:
+      development:
+        clientId: ${AUTH_GITHUB_CLIENT_ID}
+        clientSecret: ${AUTH_GITHUB_CLIENT_SECRET}
+        ## uncomment if using GitHub Enterprise
+        # enterpriseInstanceUrl: ${AUTH_GITHUB_ENTERPRISE_INSTANCE_URL}
+
 backend:
   # Note that the baseUrl should be the URL that the browser and other clients
   # should use when communicating with the backend, i.e. it needs to be
