--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -6,7 +6,7 @@ auth:
   environment: production
   providers:
     github:
-      development:
+      production:
         clientId: ${AUTH_GITHUB_CLIENT_ID}
         clientSecret: ${AUTH_GITHUB_CLIENT_SECRET}
         ## uncomment if using GitHub Enterprise
