Adding missing dash

--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: backstage
     spec:
       containers:
-        image: ghcr.io/boxboat/speedboat-backstage:latest
+      - image: ghcr.io/boxboat/speedboat-backstage:latest
         imagePullPolicy: IfNotPresent
         name: backstage
         ports:
